feat: add web stuff for customers